# mcp-sd-tts-server

./: .gitignore  README.md  config.example.yaml  pyproject.toml
src/: sd_client.py  server.py  tts_client.py
