[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "mcp-sd-tts-server"
version = "0.1.0"
description = "MCP Server for Stable Diffusion (txt2img) and TTS (GPT-SoVITS)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]
